--- a/index.html
+++ b/index.html
@@ -9,7 +9,21 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  
+  <div id="calculator">
+    <div id="readout"></div>
+    <div id="buttons">
+      <button class="digit">0</button>
+      <button class="digit">1</button>
+      <button class="digit">2</button>
+      <button class="digit">3</button>
+      <button class="digit">4</button>
+      <button class="digit">5</button>
+      <button class="digit">6</button>
+      <button class="digit">7</button>
+      <button class="digit">8</button>
+      <button class="digit">9</button>
+    </div>
+  </div>
   <script src="js/main.js"></script>
 </body>
 </html>
