--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
       <button class="digit">7</button>
       <button class="digit">8</button>
       <button class="digit">9</button>
+      
+      <button class="operator">+</button>
+      <button class="operator">-</button>
+      <button class="operator">x</button>
+      <button class="operator">/</button>
     </div>
   </div>
   <script src="js/main.js"></script>
