Equals button and listener

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       <button class="operator">-</button>
       <button class="operator">x</button>
       <button class="operator">/</button>
+      <button id="equals">=</button>
     </div>
   </div>
   <script src="js/main.js"></script>
