Implement clear function

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <button class="operator">x</button>
       <button class="operator">/</button>
       <button id="equals">=</button>
+      <button id="clear">C</button>
     </div>
   </div>
   <script src="js/main.js"></script>
