Set color and rough sizing for calculator

--- a/index.html
+++ b/index.html
@@ -12,23 +12,23 @@
   <div id="calculator">
     <div id="readout"></div>
     <div id="buttons">
-      <button class="digit">0</button>
-      <button class="digit">1</button>
-      <button class="digit">2</button>
-      <button class="digit">3</button>
-      <button class="digit">4</button>
-      <button class="digit">5</button>
-      <button class="digit">6</button>
-      <button class="digit">7</button>
-      <button class="digit">8</button>
-      <button class="digit">9</button>
-      
-      <button class="operator">+</button>
-      <button class="operator">-</button>
-      <button class="operator">x</button>
-      <button class="operator">/</button>
-      <button id="equals">=</button>
-      <button id="clear">C</button>
+      <div id="clear">C</div>
+      <div class="operator">/</div>
+      <div class="digit">7</div>
+      <div class="digit">8</div>
+      <div class="digit">9</div>
+      <div class="operator">x</div>
+      <div class="digit">4</div>
+      <div class="digit">5</div>
+      <div class="digit">6</div>
+      <div class="operator">-</div>
+      <div class="digit">1</div>
+      <div class="digit">2</div>
+      <div class="digit">3</div>
+      <div class="operator">+</div>
+      <div class="digit zero">0</div>
+      <div id="decimal">.</div>
+      <div id="equals">=</div>
     </div>
   </div>
   <script src="js/main.js"></script>
