--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
   <div id="calculator">
+    <div id="currentOperator"></div>
     <div id="readout">0</div>
     <div id="buttons">
       <div id="clear">C</div>
