--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   <title>Calculator</title>
 
   <link rel="stylesheet" href="css/styles.css">
+  
+  <script
+  src="http://code.jquery.com/jquery-3.2.1.min.js"
+  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  crossorigin="anonymous"></script>
 </head>
 <body>
   <div id="calculator">
