--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
 
   <link rel="stylesheet" href="css/styles.css">
   
-  <script
-  src="http://code.jquery.com/jquery-3.2.1.min.js"
-  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-  crossorigin="anonymous"></script>
+  <script src="js/jquery-3.2.1.min.js"></script>
 </head>
 <body>
   <div id="calculator">
